tests/fail/null/1.has
function main() : int {
    var x : int* = NULL

    var y = NULL
    var z : int = NULL


    return 0
}